duck/test/fail/case_pattern_scope.duck
import base

mv [] a = a
mv [a] _ = a
mv [b,a] _ = a
mv [c,b,a] _ = a
mv _ c = a

_ = mv [1,2,3,4] 9
